<resources>
  <string name="app_name">Show Posters</string>

  <string name="source_name">TV Show Posters</string>
  <string name="source_description">Posters and pictures from your favorite TV Shows</string>
  <string name="settings">Settings</string>

  <string name="daily">Daily</string>
  <string name="now">now</string>
  <string name="today">today</string>

  <string name="pref_key_settings">pref_settings</string>
  <string name="pref_title_settings">@string/settings</string>
  <string name="pref_key_only_unwatched" translatable="false">pref_only_unwatched</string>
  <string name="pref_title_only_unwatched">Unwatched Only</string>
  <string name="pref_summary_on_only_unwatched">Display unwatched episodes only</string>
  <string name="pref_summary_off_only_unwatched">Display posters from all episodes</string>

  <string name="pref_title_integrations">Integrations</string>
  <string name="pref_key_muzei_integration">pref_muzei_integration</string>
  <string name="pref_title_muzei_integration">Muzei App Integration</string>
  <string name="pref_summary_muzei_installed">Open Muzei settings to select "TV Shows" as your source.</string>
  <string name="pref_summary_muzei_not_installed">Click here to install Muzei Wallpaper for this app to set your wallpaper.</string>

  <string name="pref_key_seriesguide_integration">pref_seriesguide_integration</string>
  <string name="pref_title_seriesguide_integration">Series Guide Integration</string>
  <string name="pref_summary_seriesguide_installed">Open Series Guide to change your selected TV Shows.</string>
  <string name="pref_summary_seriesguide_not_setup">You must add TV Shows to Series Guide for this application to show their posters as wallpapers.</string>
  <string name="pref_summary_seriesguide_not_installed">Click here to install necessary Series Guide app for this app to select TV Show and Movie sources.</string>

  <string name="done">Done</string>
</resources>
