<!--
  Copyright 2013 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:key="@string/pref_key_settings"
    android:title="@string/pref_title_settings">
    <CheckBoxPreference
      android:defaultValue="false"
      android:key="@string/pref_key_only_unwatched"
      android:summary="@string/pref_summary_off_only_unwatched"
      android:summaryOn="@string/pref_summary_on_only_unwatched"
      android:title="@string/pref_title_only_unwatched"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/pref_title_integrations">

    <!-- Muzei App Check Preference-->
    <com.tasomaniac.muzei.tvshows.ui.IntegrationPreference
      android:key="@string/pref_key_muzei_integration"
      android:persistent="false"
      android:summary="@string/pref_summart_muzei_installed"
      android:title="@string/pref_title_muzei_integration">
      <intent
        android:targetClass="com.google.android.apps.muzei.settings.SettingsActivity"
        android:targetPackage="net.nurik.roman.muzei"/>
    </com.tasomaniac.muzei.tvshows.ui.IntegrationPreference>

    <!-- Series Guide App Check Preference -->
    <com.tasomaniac.muzei.tvshows.ui.IntegrationPreference
      android:key="@string/pref_key_seriesguide_integration"
      android:persistent="false"
      android:summary="@string/pref_summary_seriesguide_installed"
      android:title="@string/pref_title_seriesguide_integration">
      <intent
        android:action="com.battlelancer.seriesguide.api.action.VIEW_EPISODE"/>
    </com.tasomaniac.muzei.tvshows.ui.IntegrationPreference>

  </PreferenceCategory>

</PreferenceScreen>
